template_nar-osrprod_tokyo.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "cfn-Add-Nelson-Tokyo-Region"



Mappings:
  AccountToParam:
    # sea-dev
    "110636387318":
      MonitoringRoleArn: "arn:aws:iam::110636387318:role/rds-monitoring-role"
      CertificateArn: ""
    # dev-seapln-osr
    "716990209761":
      MonitoringRoleArn: "arn:aws:iam::716990209761:role/rds-monitoring-role"
      CertificateArn: "arn:aws:acm:ap-northeast-1:716990209761:certificate/35991408-f768-4680-9487-faed862441d7"
    # prod-seapln-osr
    "801004915087":
      MonitoringRoleArn: "arn:aws:iam::801004915087:role/rds-monitoring-role"
      CertificateArn: "arn:aws:acm:ap-northeast-1:801004915087:certificate/7a363c7d-2532-4acc-a82d-dfc1fa54d28e"


Resources:
#_____________________________________________________
#
#  SecurityGroup
#_____________________________________________________

  NarSecurityGroupNelson:
      Type: "AWS::EC2::SecurityGroup"
      Properties:
          GroupDescription: "NAR-NELSON-SG Tokyo Region"
          GroupName: "NAR-NELSON-SG"
          Tags: 
            - Key: "Name"
              Value: "NAR-NELSON-SG"
            - Key: "map-migrated"
              Value: "d-server-00ofs92gm4wvoj"
          VpcId: !ImportValue ibaws-vpcId-ibaws-system-vpc-ap-northeast-1
          SecurityGroupIngress: 
              # 東京リージョンの踏み台サーバー
            - CidrIp: "100.80.18.3/22"
              FromPort: 22
              IpProtocol: "tcp"
              ToPort: 22
              # dist-vpcのCIDR [prod] Tokyo: 10.16.16.0/20
            - CidrIp: "10.16.16.0/20"
              FromPort: 22
              IpProtocol: "tcp"
              ToPort: 22
          SecurityGroupEgress: 
            - CidrIp: "0.0.0.0/0"
              IpProtocol: "-1"



  NarSecurityGroupDB:
      Type: "AWS::EC2::SecurityGroup"
      Properties:
          GroupDescription: "NAR-DB-SG"
          GroupName: "NAR-DB-SG"
          VpcId: !ImportValue ibaws-vpcId-ibaws-system-vpc-ap-northeast-1
          SecurityGroupIngress: 
            - CidrIp: !Sub "${EC2NELSON.PrivateIp}/32"
              FromPort: 3306
              IpProtocol: "tcp"
              ToPort: 3306
              # bastion-tokyo
            - CidrIp: "100.80.18.3/22"
              FromPort: 3306
              IpProtocol: "tcp"
              ToPort: 3306
              # dist-vpcのCIDR [prod] Tokyo: 10.16.16.0/20
            - CidrIp: "10.16.16.0/20"
              FromPort: 22
              IpProtocol: "tcp"
              ToPort: 22
          SecurityGroupEgress: 
            - CidrIp: "0.0.0.0/0"
              IpProtocol: "-1"


#_____________________________________________________
#
#  EC2
#_____________________________________________________

# Nelsonサーバー
  EC2NELSON:
      Type: "AWS::EC2::Instance"
      Properties:
          ImageId: "ami-0169b73f89f3b43c7"
          InstanceType: "m5.large"
          KeyName: "KEY-Nelson-EC2-210324"
          AvailabilityZone: !ImportValue ibaws-az-0-ibaws-system-vpc
          Tenancy: "default"
          SubnetId: !ImportValue ibaws-az-ibaws-system-vpc-Public0
          EbsOptimized: true
          SecurityGroupIds: 
            - !Ref NarSecurityGroupNelson
          SourceDestCheck: true
          BlockDeviceMappings: 
            - DeviceName: "/dev/sda1"
              Ebs: 
                  Encrypted: false
                  VolumeSize: 50
                  SnapshotId: "snap-0adc5f415109913a2"
                  VolumeType: "gp2"
                  DeleteOnTermination: false
          Tags: 
            - Key: "Name"
              Value: "NAR-Nelson"
          HibernationOptions: 
              Configured: false
          CpuOptions: 
              CoreCount: 1
              ThreadsPerCore: 2
          EnclaveOptions: 
              Enabled: false
